--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -21,10 +21,12 @@ code {
 .ghe{
   border: 3px solid orange;
   width: 45px;
-  height: 35px;
+  height: 25px;
+  color: black;
   font-size: 12px;
+  background-color: white;
   margin-left: 2%;
-  margin-bottom: 1%;
+  /* margin-bottom: 1%; */
   border-radius: 5px;
 }
 
@@ -51,8 +53,8 @@ code {
   border-bottom: 50px solid rgb(255, 159, 95);
   border-left: 50px solid transparent;
   border-right: 50px solid transparent;
-  height: 100;
-  width:80%;
+  height: 50px;
+  width:100%;
   filter: drop-shadow(4px 30px 20px rgba(255, 255, 255, 0.5));
   font-size: 25px;
   color: #fff;
@@ -67,12 +69,41 @@ code {
 
   cursor: no-drop !important;
   border-radius: 5px;
-  width: 45px;
-  height: 35px;
+  /* width: 45px;
+  height: 35px; */
+  padding: 0px 15px 0px 15px;
+  margin-right: 5px;
+}
 
+.gheChuaChon {
+  border: 3px solid orange;
+
+  background: white;
+  color: #000;
+
+  cursor: no-drop !important;
+  border-radius: 5px;
+  /* width: 45px;
+  height: 35px; */
+  padding: 0px 15px 0px 15px;
+  margin-right: 5px;
 }
 
 .gheDangChon {
+  border: 3px solid greenyellow;
+
+  background: greenyellow;
+  color: #000;
+
+  cursor: no-drop !important;
+  border-radius: 5px;
+  /* width: 45px;
+  height: 35px; */
+  padding: 0px 15px 0px 15px;
+  margin-right: 5px;
+}
+
+/* .gheDangChon {
   background: rgb(109, 238, 109);
   border: 3px solid rgb(109, 238, 109);
   color: #000;
@@ -82,4 +113,13 @@ code {
   width: 45px;
   height: 35px;
 
+} */
+.background-img{
+  background-image: url("../public/img/bgmovie.jpg");
+  width: 100%;
+  height: 900px;
+  background-repeat: no-repeat;
+}
+.outside{
+  padding-left: 50px;
 }
