--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -24,7 +24,6 @@ code {
   height: 25px;
   color: black;
   font-size: 12px;
-  background-color: white;
   margin-left: 2%;
   /* margin-bottom: 1%; */
   border-radius: 5px;
@@ -37,16 +36,19 @@ code {
   background: none;
   border:none;
   margin-left: 2%;
-  margin-bottom: 1%;
-  font-size: 30px;
+  /* margin-bottom: 1%; */
+  font-size: 20px;
   color: yellow;
   
 }
 .firstChar{
   color: yellow;
-  font-size: 35px;
-  margin-right: 15px;
-
+  font-size: 20px;
+  width: 45px;
+  height: 35px;
+  margin-bottom: 5px;
+  background: none;
+  border: 0;
 }
 
 .screen{
@@ -81,7 +83,6 @@ code {
   background: white;
   color: #000;
 
-  cursor: no-drop !important;
   border-radius: 5px;
   /* width: 45px;
   height: 35px; */
@@ -95,7 +96,6 @@ code {
   background: greenyellow;
   color: #000;
 
-  cursor: no-drop !important;
   border-radius: 5px;
   /* width: 45px;
   height: 35px; */
@@ -116,9 +116,21 @@ code {
 } */
 .background-img{
   background-image: url("../public/img/bgmovie.jpg");
-  width: 100%;
-  height: 900px;
-  background-repeat: no-repeat;
+  position: relative;
+  /* top: 0;
+  left: 0; */
+  /* width: 100%; */
+  background-size: cover;
+  background-position: top center;
+  /* background-repeat: no-repeat; */
+}
+.inside{
+  /* position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%; */
+  /* height: 700px; */
+  background-color: rgba(0,0,0,.4);
 }
 .outside{
   padding-left: 50px;
